# rust-playground

./: Cargo.toml
request-playground/: Cargo.toml
request-playground/src/: main.rs
shape_1d/: Cargo.toml
shape_1d/src/: lib.rs  scalars.rs
shape_1d/src/scalars/: line.rs  scalar.rs
shape_2d/: Cargo.toml
shape_2d/src/: lib.rs  shapes.rs
shape_2d/src/shapes/: circle.rs  rectangle.rs  square.rs
src/: main.rs
